--- a/index.html
+++ b/index.html
@@ -49,22 +49,7 @@ button:hover {
 function createLadybird(){const e=document.createElement("div");e.classList.add("ladybird"),e.innerText="🐞",e.style.left=Math.random()*window.innerWidth+"px",document.body.appendChild(e),setTimeout((()=>{e.remove()}),1e3)}document.addEventListener("DOMContentLoaded",(function(){if("Mozilla/5.0 (Linux; x86_64) Ladybird/1.0"===navigator.userAgent)for(let e=0;e<10;e++)setTimeout(createLadybird,500*Math.random())}));
     </script>
 <div class="links">
-    <h1>Useful Links</h1>
-    <button onclick="location.href='https://github.com/Internetperson-dev/artix-runit-install'">Linux Installer</button>
-    <button onclick="location.href='https://github.com/Internetperson-dev/Linux-Desktop-Setup'">Linux Desktop Setup</button>
-    <button onclick="location.href='https://wolfyxon.github.io/3ds-web-stuff/'">3DS Games</button>
-    <button onclick="location.href='http://froxot.de/'">3DS Games - 2</button>
-    <button onclick="location.href='https://www.elizium.nu/scripts/lemmings/'">Lemmings</button>
-    <button onclick="location.href='https://kazuki-4ys.github.io/web_apps/snes9x-2005-wasm/'">SNES Emu</button>
-    <button onclick="location.href='https://www.supersmashflash.com/play/ssf1/'">Super Smash Flash</button>
-    <button onclick="location.href='https://kbhgames.com/game/super-smash-flash-2'">Super Smash Flash 2</button>
-    <button onclick="location.href='https://internetperson-dev.github.io/site/platformer/title.html'">Test Game</button>
-    <button onclick="location.href='https://internetperson-dev.github.io/site/etc/fortnitepwa/index.html'">Fortnite PWA</button>
-    <button onclick="location.href='https://yell0wsuit.page/assets/games/angry-birds-chrome/index.html'">Angry Birds Chrome</button>
-    <button onclick="location.href='https://kinoposts.web.app/test/playlistmaker.html'">Music PWA Test</button>
-    <button onclick="location.href='https://calculator.apps.chrome/'">Google Caculator PWA</button>
-    <button onclick="location.href='https://internetperson-dev.github.io/site/etc/yt/yt-bad.html'">yt-bad</button>
-    <button onclick="location.href='https://internetperson-dev.github.io/site/etc/yt/yt-good.html'">yt-good</button>
+    <button onclick="location.href='https://internetperson-dev.github.io/site/Nvidia-UE5-Linux.html'">yt-good</button>
     <footer>Created by Internetperson-dev</footer>
 </div>
 </body>
