--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ button:hover {
 function createLadybird(){const e=document.createElement("div");e.classList.add("ladybird"),e.innerText="🐞",e.style.left=Math.random()*window.innerWidth+"px",document.body.appendChild(e),setTimeout((()=>{e.remove()}),1e3)}document.addEventListener("DOMContentLoaded",(function(){if("Mozilla/5.0 (Linux; x86_64) Ladybird/1.0"===navigator.userAgent)for(let e=0;e<10;e++)setTimeout(createLadybird,500*Math.random())}));
     </script>
 <div class="links">
-    <button onclick="location.href='https://internetperson-dev.github.io/site/Nvidia-UE5-Linux.html'">yt-good</button>
+    <button onclick="location.href='https://internetperson-dev.github.io/site/Nvidia-UE5-Linux.html'">UE5 Nvidia Branch Linux Struggles</button>
     <footer>Created by Internetperson-dev</footer>
 </div>
 </body>
