--- a/Nvidia-UE5-Linux.html
+++ b/Nvidia-UE5-Linux.html
@@ -5,11 +5,43 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="A group of websites">
 <title>Internetperson-dev Useful links</title>
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+<style>
+
+  body {
+  background-color: #121212; /* dark background */
+  color: #e0e0e0;            /* light text */
+  font-family: system-ui, sans-serif;
+  line-height: 1.6;
+  margin: 0;
+  padding: 1rem;
+}
+
+/* Headings */
+h1, h2, h3, h4, h5, h6 {
+  color: #ffffff;            /* bright white for contrast */
+  margin-top: 1.2em;
+  margin-bottom: 0.5em;
+  font-weight: 600;
+}
+
+/* Paragraphs */
+p {
+  color: #cccccc;            /* slightly dimmer than headings */
+  margin: 0 0 1em 0;
+}
+
+/* Optional link styling */
+a {
+  color: #4ea1ff;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+</style>
 
 
+  
 
 <h5>
 
