--- a/Nvidia-UE5-Linux.html
+++ b/Nvidia-UE5-Linux.html
@@ -116,7 +116,7 @@ For example when I try to built I get
 Would you like to attempt to contiune anyways?"
 </h5>
 
-Building gets the error
+Building the project in the editor GUI gets the error
 
 <h4>
 LogStats: Stats thread started at 0.214524
