--- a/index.html
+++ b/index.html
@@ -41,6 +41,33 @@ button {
 button:hover {
   background: rgba(255, 255, 255, 0.2);
 }
+  .collapsible {
+    background: rgba(255, 255, 255, 0.1);
+    color: #fff;
+    cursor: pointer;
+    padding: 12px;
+    width: 300px;
+    border: none;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 1rem;
+    margin: 8px 0;
+    transition: background 0.2s;
+    backdrop-filter: blur(10px);
+  }
+  .collapsible:hover {
+    background: rgba(255, 255, 255, 0.2);
+  }
+  .content {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
+  }
+  .content button {
+    width: 280px; /* slightly smaller so it looks nested */
+    background: rgba(255, 255, 255, 0.05);
+  }
 .ladybird{position:absolute;font-size:2rem;top:0;opacity:1;pointer-events:none;animation:fall 3s linear forwards}@keyframes fall{from{transform:translateY(-50px);opacity:1}to{transform:translateY(100vh);opacity:0}}
 </style>
 </head>
@@ -51,6 +78,31 @@ function createLadybird(){const e=document.createElement("div");e.classList.add(
 <div class="links">
     <button onclick="location.href='https://internetperson-dev.github.io/site/Nvidia-UE5-Linux.html'">UE5 Nvidia Branch Linux Struggles</button>
     <footer>Created by Internetperson-dev</footer>
+  <button class="collapsible">Old Stuff</button>
+<div class="content">
+  <button onclick="location.href='https://github.com/Internetperson-dev/artix-runit-install'">Linux Installer</button>
+  <button onclick="location.href='https://github.com/Internetperson-dev/Linux-Desktop-Setup'">Linux Desktop Setup</button>
+  <button onclick="location.href='https://wolfyxon.github.io/3ds-web-stuff/'">3DS Games</button>
+  <button onclick="location.href='http://froxot.de/'">3DS Games - 2</button>
+  <button onclick="location.href='https://www.elizium.nu/scripts/lemmings/'">Lemmings</button>
+  <button onclick="location.href='https://kazuki-4ys.github.io/web_apps/snes9x-2005-wasm/'">SNES Emu</button>
+  <button onclick="location.href='https://www.supersmashflash.com/play/ssf1/'">Super Smash Flash</button>
+  <button onclick="location.href='https://kbhgames.com/game/super-smash-flash-2'">Super Smash Flash 2</button>
+  <button onclick="location.href='https://internetperson-dev.github.io/site/platformer/title.html'">Test Game</button>
+  <button onclick="location.href='https://internetperson-dev.github.io/site/etc/fortnitepwa/index.html'">Fortnite PWA</button>
+  <button onclick="location.href='https://yell0wsuit.page/assets/games/angry-birds-chrome/index.html'">Angry Birds Chrome</button>
+  <button onclick="location.href='https://kinoposts.web.app/test/playlistmaker.html'">Music PWA Test</button>
+  <button onclick="location.href='https://calculator.apps.chrome/'">Google Calculator PWA</button>
+  <button onclick="location.href='https://internetperson-dev.github.io/site/etc/yt/yt-bad.html'">yt-bad</button>
+  <button onclick="location.href='https://internetperson-dev.github.io/site/etc/yt/yt-good.html'">yt-good</button>
+</div>
+
+<script>
+  document.querySelector(".collapsible").addEventListener("click", function() {
+    const content = this.nextElementSibling;
+    content.style.display = content.style.display === "flex" ? "none" : "flex";
+  });
+</script>
 </div>
 </body>
 </html>
