--- a/ye-kanyewest.html
+++ b/ye-kanyewest.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="refresh" content="0; url=https://web.archive.org/web/20250927114435/https://trackerhub.cx/sh/12ME-pShkPVZOKwAjne-3A1JgJf0HhMjjsIs_wFJzq54">
         <script type="text/javascript">
-            window.location.href = "http://example.com"
+            window.location.href = "https://web.archive.org/web/20250927114435/https://trackerhub.cx/sh/12ME-pShkPVZOKwAjne-3A1JgJf0HhMjjsIs_wFJzq54"
         </script>
         <title>Ye (Kanye West) song list.</title>
     </head>
