--- a/Best Fortnite Maps.html
+++ b/Best Fortnite Maps.html
@@ -1,255 +1,293 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Best Fortnite Maps</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Best Fortnite Maps — Side Text</title>
 
-  <style>
-    /* --- BASE STYLES --- */
-    body {
-      font-family: "Poppins", system-ui, sans-serif;
-      background: radial-gradient(circle at top, #0a0a14 0%, #050509 100%);
-      color: #e8e8f0;
-      margin: 0;
-      padding: 2rem;
-      min-height: 100vh;
-    }
+<style>
+  :root{
+    --bg:#050509;
+    --card-a:#13131f;
+    --card-b:#1a1a29;
+    --muted:#bcbce0;
+    --accent:#8fa2ff;
+    --radius:14px;
+  }
 
-    h1 {
-      text-align: center;
-      font-size: 2.2rem;
-      color: #ffffff;
-      text-shadow: 0 0 12px rgba(138, 180, 255, 0.6);
-      margin-bottom: 2rem;
-    }
+  body{
+    margin:0;
+    padding:2rem;
+    font-family: "Poppins", system-ui, sans-serif;
+    background: radial-gradient(circle at top,left, #0a0a14 0%, var(--bg) 100%);
+    color:#e8e8f0;
+  }
 
-    /* --- GRID LAYOUT --- */
-    .layout {
-      display: grid;
-      grid-template-columns: 2fr 1fr;
-      gap: 2rem;
-      max-width: 1200px;
-      margin: 0 auto;
-    }
+  .wrap {
+    max-width:1100px;
+    margin:0 auto;
+  }
 
-    /* --- SIDEBAR --- */
-    aside {
-      background: linear-gradient(145deg, #181824, #10101a);
-      border: 1px solid #2c2c44;
-      border-radius: 16px;
-      padding: 1.5rem;
-      color: #d0d0f0;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
-    }
+  h1{
+    text-align:center;
+    margin:0 0 1.5rem;
+    color:#fff;
+    text-shadow:0 0 10px rgba(143,162,255,0.18);
+    font-size:2rem;
+  }
 
-    aside h2, aside h3 {
-      color: #9bb8ff;
-      text-shadow: 0 0 8px rgba(100, 150, 255, 0.6);
-      margin-top: 0;
-    }
+  /* keep existing site sidebar if you want — but main preview cards now have side text */
+  .layout {
+    display:grid;
+    grid-template-columns: 1fr 300px;
+    gap:2rem;
+  }
 
-    aside ul {
-      padding-left: 1.2rem;
-    }
+  main {
+    min-height:100vh;
+  }
 
-    aside li {
-      margin-bottom: 0.4rem;
-      color: #bcbce5;
-    }
+  aside {
+    background:linear-gradient(145deg,#181824,#10101a);
+    border-radius:var(--radius);
+    padding:1rem;
+    border:1px solid #2c2c44;
+    color:var(--muted);
+    box-shadow:0 10px 30px rgba(0,0,0,0.45);
+    font-size:0.95rem;
+  }
 
-    /* --- PREVIEW CARDS --- */
-    .preview {
-      display: flex;
-      flex-direction: row;
-      align-items: stretch;
-      gap: 1rem;
-      background: linear-gradient(145deg, #13131f, #1a1a29);
-      border: 1px solid #292947;
-      border-radius: 16px;
-      overflow: hidden;
-      margin-bottom: 1.5rem;
-      box-shadow: 0 0 20px rgba(0,0,0,0.4);
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
+  /* ---- Preview card: left image, right text ---- */
+  .preview {
+    display:grid;
+    grid-template-columns: 300px 1fr; /* <- fixed thumbnail, flexible text column */
+    gap:1rem;
+    align-items:stretch;
+    background: linear-gradient(145deg, var(--card-a), var(--card-b));
+    border-radius: var(--radius);
+    overflow:hidden;
+    border:1px solid #292947;
+    box-shadow:0 6px 18px rgba(0,0,0,0.45);
+    margin-bottom:1.25rem;
+    min-height:150px; /* ensures a consistent height */
+  }
 
-    .preview:hover {
-      transform: scale(1.02);
-      box-shadow: 0 0 30px rgba(105, 150, 255, 0.4);
-    }
+  .preview img {
+    width:100%;
+    height:100%;
+    object-fit:cover;
+    display:block;
+    background:linear-gradient(180deg,#0c0c14,#11111a);
+  }
 
-    .preview img {
-      width: 300px;
-      height: 100%;
-      object-fit: cover;
-      flex-shrink: 0;
-    }
+  .info {
+    padding:1rem 1.25rem;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+  }
 
-    .info {
-      padding: 1rem 1.2rem;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
+  .info h3 {
+    margin:0 0 0.5rem 0;
+    color:#fff;
+    font-size:1.15rem;
+    text-shadow:0 0 6px rgba(100,150,255,0.18);
+  }
 
-    .info h3 {
-      margin: 0 0 0.5rem;
-      color: #ffffff;
-      font-size: 1.4rem;
-      text-shadow: 0 0 6px rgba(85, 155, 255, 0.6);
-    }
+  .info p {
+    margin:0;
+    color:var(--muted);
+    line-height:1.45;
+    font-size:0.96rem;
+  }
 
-    .info p {
-      margin: 0.25rem 0;
-      color: #bcbce0;
-      line-height: 1.4;
-    }
+  .meta-row {
+    margin-top:0.75rem;
+    display:flex;
+    gap:0.75rem;
+    align-items:center;
+    color:#9fb2ff;
+    font-size:0.85rem;
+  }
 
-    a {
-      text-decoration: none;
-      color: inherit;
-    }
+  .link {
+    margin-top:0.6rem;
+    display:inline-block;
+    font-size:0.9rem;
+    color:#a8bfff;
+    text-decoration:none;
+    opacity:0.95;
+  }
 
-    iframe {
-      width: 100%;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.4);
-      margin-bottom: 2rem;
-    }
+  iframe {
+    width:100%;
+    border-radius:12px;
+    border:0;
+    margin-bottom:1.5rem;
+    box-shadow:0 10px 30px rgba(0,0,0,0.45);
+  }
 
-    /* --- RESPONSIVE --- */
-    @media (max-width: 900px) {
-      .layout {
-        grid-template-columns: 1fr;
-      }
-      .preview {
-        flex-direction: column;
-      }
-      .preview img {
-        width: 100%;
-        height: 200px;
-      }
-      aside {
-        order: -1;
-      }
-    }
+  /* fallback image style (in case the image doesn't load) */
+  .no-image {
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    color:var(--muted);
+    font-weight:600;
+    font-size:1rem;
+    background:linear-gradient(180deg,#0c0c14,#0e0e18);
+  }
 
-    .loading {
-      text-align: center;
-      color: #8fa2ff;
-      margin-top: 1rem;
-    }
-  </style>
-
-  <script>
-    async function createPreview(url, title, desc) {
-      const cacheKey = `preview_${url}`;
-      const cached = localStorage.getItem(cacheKey);
-
-      if (cached) {
-        renderPreview(JSON.parse(cached), title, desc);
-        return;
-      }
-
-      const apiUrl = `https://api.microlink.io/?url=${encodeURIComponent(url)}`;
-      try {
-        const res = await fetch(apiUrl);
-        const data = await res.json();
-        const meta = data.data;
-        localStorage.setItem(cacheKey, JSON.stringify(meta));
-        renderPreview(meta, title, desc);
-      } catch (e) {
-        console.error("Failed to fetch preview", e);
-      }
-    }
-
-    function renderPreview(meta, title, desc) {
-      const div = document.createElement("div");
-      div.className = "preview";
-      div.innerHTML = `
-        <a href="${meta.url}" target="_blank">
-          <img src="${meta.image?.url || ''}" alt="${meta.title}" />
-          <div class="info">
-            <h3>${title || meta.title}</h3>
-            <p>${desc || meta.description || "No description available."}</p>
-          </div>
-        </a>
-      `;
-      document.getElementById("container").appendChild(div);
-    }
-
-    window.onload = () => {
-      const maps = [
-        {
-          url: "https://www.fortnite.com/@jakus/3623-3871-1041?lang=en-US",
-          title: "Battle Royale: HIGH TIDE | Snapshots",
-          desc: "A full fan-made Battle Royale game mode. Sadly doesn’t get a lot of players."
-        },
-        {
-          url: "https://www.fortnite.com/@teamrevibed/9997-0482-5512?lang=en-US",
-          title: "Chapter 3: Revibed",
-          desc: "A solid recreation of Chapter 3 Vibin'."
-        },
-        {
-          url: "https://www.fortnite.com/@pandvilspam/2229-0002-0277?lang=en-US",
-          title: "Rewind Royale",
-          desc: "A version of Chapter 1 Fortnite that is more accurate."
-        },
-        {
-          url: "https://www.fortnite.com/@epic/ranked-ballistic?lang=en-US",
-          title: "Ranked Ballistic (By Epic Games)",
-          desc: "A kinda fun Counter-Strike–like map by Epic Games."
-        }
-      ];
-      maps.forEach(m => createPreview(m.url, m.title, m.desc));
-    };
-  </script>
+  @media (max-width:980px){
+    .layout{ grid-template-columns: 1fr; }
+    .preview { grid-template-columns: 1fr; }
+    .preview img { height:220px; }
+    aside { order:-1; }
+  }
+</style>
 </head>
-
 <body>
-  <div class="layout">
-    <main>
-      <h1>Best Fortnite Maps</h1>
+  <div class="wrap">
+    <h1>Best Fortnite Maps</h1>
+    <div class="layout">
+      <main>
+        <!-- YouTube -->
+        <iframe height="480"
+          src="https://www.youtube.com/embed/Pr9LcxHFE_k"
+          title="I Made My Own Fortnite Battle Royale"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
 
-      <!-- YouTube Embed -->
-      <iframe 
-        width="1378" 
-        height="775" 
-        src="https://www.youtube.com/embed/Pr9LcxHFE_k" 
-        title="I Made My Own Fortnite Battle Royale" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-        referrerpolicy="strict-origin-when-cross-origin" 
-        allowfullscreen>
-      </iframe>
+        <!-- container for cards -->
+        <div id="container"></div>
+      </main>
 
-      <!-- Fortnite Map Previews will load here -->
-      <div id="container"></div>
+      <aside>
+        <h3 style="color:#9bb8ff; margin-top:0;">Featured Sections</h3>
+        <ul style="padding-left:1rem; margin-top:0.5rem;">
+          <li>Battle Royale: HIGH TIDE — Fan-made full Battle Royale</li>
+          <li>Chapter 3: Revibed — Classic Fortnite nostalgia</li>
+          <li>Rewind Royale — Accurate Chapter 1 recreation</li>
+          <li>Ranked Ballistic — Epic’s tactical shooter mode</li>
+        </ul>
 
-      <div class="loading" id="loading">Loading previews...</div>
-    </main>
-
-    <aside>
-      <h2>About This Page</h2>
-      <p>
-        Welcome! This page highlights some of the best **Fortnite Creative** and **Battle Royale** experiences — a mix of community-made maps and official modes.
-      </p>
-      <p>
-        Each map link dynamically loads live images and details for an experience similar to Discord-style previews.
-      </p>
-
-      <h3>Featured Sections</h3>
-      <ul>
-        <li>Battle Royale: HIGH TIDE — Fan-made full Battle Royale</li>
-        <li>Chapter 3: Revibed — Classic Fortnite nostalgia</li>
-        <li>Rewind Royale — Accurate Chapter 1 recreation</li>
-        <li>Ranked Ballistic — Epic’s tactical shooter mode</li>
-      </ul>
-
-      <p style="margin-top: 1rem;">
-        ⚡ Pro tip: Reload once to cache all previews for faster performance next time!
-      </p>
-    </aside>
+        <p style="margin-top:1rem; color:var(--muted);">⚡ Pro tip: Reload once to cache all previews for faster performance next time!</p>
+      </aside>
+    </div>
   </div>
+
+<script>
+  // small inline SVG fallback (shown if there is no image from the preview)
+  const FALLBACK_SVG = 'data:image/svg+xml;utf8,' + encodeURIComponent(
+    `<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="800">
+      <defs>
+        <linearGradient id="g" x1="0" x2="1">
+          <stop offset="0" stop-color="#0c0c14"/><stop offset="1" stop-color="#11111a"/>
+        </linearGradient>
+      </defs>
+      <rect width="100%" height="100%" fill="url(#g)"/>
+      <g fill="#bdbde6" font-family="sans-serif" font-size="40" text-anchor="middle">
+        <text x="50%" y="48%">No preview image</text>
+        <text x="50%" y="60%" font-size="24" opacity="0.85">Click the card to open the map</text>
+      </g>
+    </svg>`
+  );
+
+  // Maps data: your original titles + descriptions
+  const maps = [
+    {
+      url: "https://www.fortnite.com/@jakus/3623-3871-1041?lang=en-US",
+      title: "Battle Royale: HIGH TIDE | Snapshots",
+      desc: "A full fan-made Battle Royale game mode. Sadly doesn't get a lot of players."
+    },
+    {
+      url: "https://www.fortnite.com/@teamrevibed/9997-0482-5512?lang=en-US",
+      title: "Chapter 3: Revibed",
+      desc: "A solid recreation of Chapter 3 Vibin'."
+    },
+    {
+      url: "https://www.fortnite.com/@pandvilspam/2229-0002-0277?lang=en-US",
+      title: "Rewind Royale",
+      desc: "A version of Chapter 1 Fortnite that is more accurate."
+    },
+    {
+      url: "https://www.fortnite.com/@epic/ranked-ballistic?lang=en-US",
+      title: "Ranked Ballistic (By Epic Games)",
+      desc: "A kinda fun Counter-Strike–like map by Epic Games."
+    }
+  ];
+
+  // create preview using microlink, but show your own title/desc on the right
+  async function createPreview(map) {
+    const cacheKey = 'preview_' + map.url;
+    const cached = localStorage.getItem(cacheKey);
+    let meta = null;
+
+    if (cached) {
+      try { meta = JSON.parse(cached); } catch(e){ meta = null; }
+    }
+
+    if (!meta) {
+      try {
+        const res = await fetch('https://api.microlink.io/?url=' + encodeURIComponent(map.url));
+        const json = await res.json();
+        meta = json.data || null;
+        if (meta) {
+          localStorage.setItem(cacheKey, JSON.stringify(meta));
+        }
+      } catch (err) {
+        // network error or CORS issue — fallback to null meta (we'll still show your title/desc)
+        console.warn('preview fetch failed for', map.url, err);
+        meta = null;
+      }
+    }
+
+    renderPreview(map, meta);
+  }
+
+  function renderPreview(map, meta) {
+    const container = document.getElementById('container');
+
+    const card = document.createElement('article');
+    card.className = 'preview';
+
+    // pick image URL from meta if available
+    const imgUrl = (meta && meta.image && meta.image.url) ? meta.image.url : FALLBACK_SVG;
+
+    // build inner HTML - title & description come from your original text (map.title, map.desc)
+    card.innerHTML = `
+      <a href="${map.url}" target="_blank" rel="noopener noreferrer" style="display:block; color:inherit;">
+        <div class="thumb-wrap">
+          <img src="${imgUrl}" alt="${escapeHtml(map.title)}" onerror="this.onerror=null; this.src='${FALLBACK_SVG}';" />
+        </div>
+        <div class="info">
+          <h3>${escapeHtml(map.title)}</h3>
+          <p>${escapeHtml(map.desc)}</p>
+          <div class="meta-row">
+            <span>View on Fortnite</span>
+          </div>
+        </div>
+      </a>
+    `;
+
+    container.appendChild(card);
+  }
+
+  // utility to escape user text for safety
+  function escapeHtml(str='') {
+    return String(str)
+      .replaceAll('&','&amp;')
+      .replaceAll('<','&lt;')
+      .replaceAll('>','&gt;')
+      .replaceAll('"','&quot;')
+      .replaceAll("'",'&#39;');
+  }
+
+  // init
+  (function init(){
+    maps.forEach(createPreview);
+  })();
+</script>
 </body>
 </html>
