--- a/Best Fortnite Maps.html
+++ b/Best Fortnite Maps.html
@@ -15,13 +15,13 @@
     --radius:14px;
   }
 
-  body{
-    margin:0;
-    padding:2rem;
-    font-family: "Poppins", system-ui, sans-serif;
-    background: radial-gradient(circle at top,left, #0a0a14 0%, var(--bg) 100%);
-    color:#e8e8f0;
-  }
+body {
+  margin: 0;
+  padding: 2rem;
+  font-family: "Poppins", system-ui, sans-serif;
+  background: radial-gradient(circle at top left, #0a0a14 0%, var(--bg) 100%);
+  color: #e8e8f0;
+}
 
   .wrap {
     max-width:1100px;
