Update Best Fortnite Maps.html

--- a/Best Fortnite Maps.html
+++ b/Best Fortnite Maps.html
@@ -166,10 +166,12 @@ body {
       <aside>
         <h3 style="color:#9bb8ff; margin-top:0;">Featured Sections</h3>
         <ul style="padding-left:1rem; margin-top:0.5rem;">
-          <li>Battle Royale: HIGH TIDE — Fan-made full Battle Royale</li>
+        <!--  <li>Battle Royale: HIGH TIDE — Fan-made full Battle Royale</li>
           <li>Chapter 3: Revibed — Classic Fortnite nostalgia</li>
           <li>Rewind Royale — Accurate Chapter 1 recreation</li>
-          <li>Ranked Ballistic — Epic’s tactical shooter mode</li>
+          <li>Ranked Ballistic — Epic’s tactical shooter mode</li> -->
+
+          <li href="https://www.fortnite.com/download?lang=en-US">Play Fortnite</li>          
         </ul>
 
         <p style="margin-top:1rem; color:var(--muted);">⚡ Pro tip: Reload once to cache all previews for faster performance next time!</p>
