--- a/Best Fortnite Maps.html
+++ b/Best Fortnite Maps.html
@@ -171,7 +171,7 @@ body {
           <li>Rewind Royale — Accurate Chapter 1 recreation</li>
           <li>Ranked Ballistic — Epic’s tactical shooter mode</li> -->
 
-          <li href="https://www.fortnite.com/download?lang=en-US">Play Fortnite</li>          
+            <li><a href="https://www.fortnite.com/download?lang=en-US" target="_blank">Play Fortnite</a></li>
         </ul>
 
         <p style="margin-top:1rem; color:var(--muted);">⚡ Pro tip: Reload once to cache all previews for faster performance next time!</p>
