Update Best Fortnite Maps.html

--- a/Best Fortnite Maps.html
+++ b/Best Fortnite Maps.html
@@ -162,17 +162,18 @@ body {
         <!-- container for cards -->
         <div id="container"></div>
       </main>
-
-      <aside>
-        <h3 style="color:#9bb8ff; margin-top:0;">Featured Sections</h3>
-        <ul style="padding-left:1rem; margin-top:0.5rem;">
-        <!--  <li>Battle Royale: HIGH TIDE — Fan-made full Battle Royale</li>
-          <li>Chapter 3: Revibed — Classic Fortnite nostalgia</li>
-          <li>Rewind Royale — Accurate Chapter 1 recreation</li>
-          <li>Ranked Ballistic — Epic’s tactical shooter mode</li> -->
-
-            <li><a href="https://www.fortnite.com/download?lang=en-US" target="_blank">Play Fortnite</a></li>
-        </ul>
+         <aside>
+  <h3 style="color:#9bb8ff; margin-top:0;">Featured Sections</h3>
+  <ul style="padding-left:1rem; margin-top:0.5rem;">
+    <li>
+      <button 
+        onclick="window.open('https://www.fortnite.com/download?lang=en-US', '_blank')" 
+        style="padding: 0.5rem 1rem; background-color:#9bb8ff; color:white; border:none; border-radius:5px; cursor:pointer;">
+        Play Fortnite
+      </button>
+    </li>
+  </ul>
+</aside>
 
         <p style="margin-top:1rem; color:var(--muted);">⚡ Pro tip: Reload once to cache all previews for faster performance next time!</p>
       </aside>
